--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -19,6 +19,12 @@
     --premiumgold:   #e29c2d;
     --premiumgreen:   #2c744b;
     --premiumred:   #be231d;
+    
+    .color1 {color: #00f39b;}
+.color2 {color: #ddde64;}
+.color3 {color: #700079;}
+.color4 {color: #c1005c;}
+.color5 {color: #e46c59;}
   }
 
 /* 1. Başlığın yukarıdan gelmesi için */
