--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -21,7 +21,7 @@
     --premiumred:   #be231d;
     
     .color1 {color: #00f39b;}
-.color2 {color: #ddde64;}
+.color2 {color: #e6d113;}
 .color3 {color: #700079;}
 .color4 {color: #c1005c;}
 .color5 {color: #e46c59;}
